# motioncam

./: README.md  setupenv.sh
MotionCam-Android/: .gitignore  build.gradle  settings.gradle
MotionCam-Android/MotionCam/: CMakeLists.txt  build.gradle  proguard-rules.pro
MotionCam-Android/MotionCam/src/main/: AndroidManifest.xml
MotionCam-Android/MotionCam/src/main/cpp/: JavaUtils.cpp  JavaUtils.h  NativeCamera.cpp  NativeCameraBridgeListener.cpp  NativeCameraBridgeListener.h  NativeRawPreviewListener.cpp  NativeRawPreviewListener.h  Processor.cpp
MotionCam-Android/MotionCam/src/main/cpp/camera/: CameraDescription.h  CameraSession.cpp  CameraSession.h  CameraSessionContext.h  CameraSessionListener.h  CameraSessionState.h  CameraStateManager.cpp  CameraStateManager.h  CaptureSessionManager.cpp  CaptureSessionManager.h  ClHelper.cpp  ClHelper.h  DisplayDimension.h  Exceptions.h  Logger.h  NativeClBuffer.cpp  NativeClBuffer.h  RawImageConsumer.cpp  RawImageConsumer.h  RawPreviewListener.h
MotionCam-Android/MotionCam/src/main/java/com/motioncam/: CameraActivity.java  DenoiseSettings.java  PostProcessActivity.java  SensorEventManager.java  SettingsActivity.java
MotionCam-Android/MotionCam/src/main/java/com/motioncam/camera/: AsyncNativeCameraOps.java  CameraManualControl.java  NativeCameraBuffer.java  NativeCameraInfo.java  NativeCameraMetadata.java  NativeCameraRawPreviewListener.java  NativeCameraSessionBridge.java  NativeCameraSessionListener.java  PostProcessSettings.java
MotionCam-Android/MotionCam/src/main/java/com/motioncam/model/: CameraProfile.java  PostProcessViewModel.java  SettingsViewModel.java
MotionCam-Android/MotionCam/src/main/java/com/motioncam/processor/: NativeProcessor.java  NativeProcessorProgressListener.java  ProcessorReceiver.java  ProcessorService.java
MotionCam-Android/MotionCam/src/main/java/com/motioncam/ui/: BitmapDrawView.java  CameraCapturePreviewAdapter.java  CameraGridLayout.java  PostProcessFragment.java  PostProcessPreviewAdapter.java  PostProcessSmallPreviewAdapter.java  PreviewAdapter.java  SettingsFragment.java  SmallPreviewListAdapter.java
MotionCam-Android/MotionCam/src/main/res/drawable/: capture_btn.xml  capture_btn_default.xml  capture_btn_pressed.xml  expand_btn.xml  exposure_square.xml  focus_circle.xml  manual_controls_frame_background.xml  preview_image_border.xml  progress_circular.xml  round_filter_center_focus_24.xml  round_iso_24.xml  round_shutter_speed_24.xml  saving_progress_bg.xml  seekbar_tick_mark.xml  temperature_gradient.xml  tint_gradient.xml  up_arrow_24.xml
MotionCam-Android/MotionCam/src/main/res/layout/: camera_activity.xml  manual_controls.xml  post_process_activity.xml  post_process_fragment.xml  preview.xml  preview_controls.xml  preview_list_item.xml  preview_settings.xml  settings_activity.xml  settings_fragment.xml
MotionCam-Android/MotionCam/src/main/res/layout-land/: post_process_fragment.xml
MotionCam-Android/MotionCam/src/main/res/values/: colors.xml  dimens.xml  integers.xml  strings.xml  styles.xml
MotionCam-Android/MotionCam/src/main/res/xml/: camera_activity_scene.xml  paths.xml
MotionCam-Android/gradle/wrapper/: gradle-wrapper.properties
libMotionCam/: .gitignore
libMotionCam/libMotionCam/: test_main.cpp
libMotionCam/libMotionCam.xcodeproj/: project.pbxproj
libMotionCam/libMotionCam.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
libMotionCam/libMotionCam/generators/: CameraPreviewGenerator.cpp  Common.h  DenoiseFillGenerator.cpp  DenoiseGenerator.cpp  PostProcessGenerator.cpp  generate.sh
libMotionCam/libMotionCam/include/motioncam/: CameraPreview.h  CameraProfile.h  Color.h  Exceptions.h  ImageOps.h  ImageProcessor.h  ImageProcessorProgress.h  Logger.h  Math.h  Measure.h  RawBufferManager.h  RawContainer.h  RawImageMetadata.h  Settings.h  Temperature.h  Types.h  Util.h
libMotionCam/libMotionCam/source/: CameraPreview.cpp  CameraProfile.cpp  Color.cpp  ImageOps.cpp  ImageProcessor.cpp  Logger.cpp  Measure.cpp  RawBufferManager.cpp  RawContainer.cpp  Settings.cpp  Temperature.cpp  Util.cpp
